--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css">
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXD6aRw2EBOv_8psZHptYP6YDt8mix1B8"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
