--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXD6aRw2EBOv_8psZHptYP6YDt8mix1B8"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXD6aRw2EBOv_8psZHptYP6YDt8mix1B8&libraries=places"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
